# diffgerber

./: README.md  color_generator.py  diffgerber.py  pyproject.toml  requirements.txt  setup.py
example/2/: bottom.grb
examples/pcb-2-a/: tec-controller-B_Cu.gbr  tec-controller-B_Mask.gbr  tec-controller-B_Paste.gbr  tec-controller-B_Silkscreen.gbr  tec-controller-Edge_Cuts.gbr  tec-controller-F_Cu.gbr  tec-controller-F_Mask.gbr  tec-controller-F_Paste.gbr  tec-controller-F_Silkscreen.gbr  tec-controller-job.gbrjob
examples/pcb-2-b/: tec-controller-B_Cu.gbr  tec-controller-B_Mask.gbr  tec-controller-B_Paste.gbr  tec-controller-B_Silkscreen.gbr  tec-controller-Edge_Cuts.gbr  tec-controller-F_Cu.gbr  tec-controller-F_Mask.gbr  tec-controller-F_Paste.gbr  tec-controller-F_Silkscreen.gbr  tec-controller-job.gbrjob
loader/: __init__.py  dirSelectDialog.py  gerbLoader.py  simple_color_generator.py
src/: color_generator.py  diffgerber-cli.py
src/loader/: __init__.py  gerbLoader.py  simple_color_generator.py
